@@ -37,9 +37,9 @@
 void dtauc_ssalbCalc(Workspace &ws,
                      VectorView dtauc,
                      VectorView ssalb,
-                     const Agenda& opt_prop_part_agenda,
                      const Agenda& propmat_clearsky_agenda,
                      const Agenda& spt_calc_agenda,
+                     const Agenda& opt_prop_part_agenda,
                      ConstTensor4View pnd_field,
                      ConstTensor3View t_field,
                      ConstTensor3View z_field, 
