@@ -1,3 +1,14 @@
+2016-02-19 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-444
+	
+	* src/disort.cc (phase_functionCalc):
+	Bugfix: use flat-scat-elem index for pnd_field value extraction.
+	In layer-pfct from level-pfct averaging, made loop over angle the innermost
+	loop avoiding re-decision on averaging approach for each angle.
+	
+	* src/m_disort.cc, src/disort.h: Cosmetics.
+	
 2016-02-18 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-443
